--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,13 @@
 #Update all the sections by editing the data.yml file inside _data folder.
 
 # Site Settings
-title: My Resume
+title: Kein's Resume
 url: 'http://webjeda.com'
-baseurl: '/online-cv' #change it according to your repository name
+
+#change it according to your repository name
+# disabling since we are using a custom domain
+#baseurl: '/online-cv' 
+
 description: A beautiful Jekyll theme for creating resume
 # Style will be applied only after restarting the build or serve. Just choose one of the options.
 theme_skin: blue # blue turquoise green berry orange ceramic
